# newnice

./: .env.prod.example  .gitignore  PRODUCTION_READINESS_PLAN.md  PROJECT_SPEC.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
.beads/: issues.jsonl
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  migrate.bat  migrate.sh  pyproject.toml  uvicorn.err
backend/alembic/: env.py
backend/alembic/versions/: 20260424_0001_initial_schema.py  20260525_0002_warranty_module.py  20260527_0003_product_price_text.py  20260614_0004_update_newnice_price_table.py  20260616_0005_warranty_multi_type.py  20260616_0006_film_package_warranty_type.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: admin_posts.py  admin_settings.py  auth.py  brands.py  categories.py  posts.py  products.py  quotes.py  sitemap.py  upload.py  warranties.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  content.py  product.py  quote.py  user.py  warranty.py
backend/app/schemas/: __init__.py  common.py  post.py  product.py  quote.py  user.py  warranty.py
backend/app/services/: email_service.py  image_service.py
backend/app/utils/: sanitize.py
docs/: API_ROUTES.md  DATABASE_MIGRATIONS.md
frontend/: .dockerignore  Dockerfile  dev.err  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
nginx/: nginx.conf
(+60 files in other folders)
